--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,23 @@
   margin: 0;
   padding: 0;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  height: 100%;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
+
+#root {
+  background: #eee;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 3.2rem;
+  height: 100%;
+  position: relative;
+  width: 100%;
+}
