--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
   width: 100%;
 }
 
+ul,
+ol {
+  list-style: none;
+}
+
 #root {
   background: #eee;
   font-family: Arial, Helvetica, sans-serif;
