--- a/src/components/Canvas/index.css
+++ b/src/components/Canvas/index.css
@@ -1,5 +1,4 @@
 .Canvas {
-  border: 1px solid #f00;
   height: 100%;
   padding: 2.4rem;
   position: relative;
@@ -8,16 +7,15 @@
 }
 
 .Canvas__Container {
-  border: 1px solid #0f0;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
   height: 100%;
   min-height: 500px;
+  overflow: hidden;
   position: relative;
   width: 100%;
 }
 
 .Canvas__DrawingArea {
-  border: 1px solid #00f;
   height: 100%;
   left: 0;
   position: absolute;
