--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ ol {
   list-style: none;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 #root {
   background: #eee;
   font-family: Arial, Helvetica, sans-serif;
