--- a/src/components/Canvas/index.css
+++ b/src/components/Canvas/index.css
@@ -26,7 +26,7 @@
 
 .Canvas__ImageOverlay {
   background: transparent no-repeat center center;
-  background-size: cover;
+  background-size: contain;
   height: 100%;
   left: 0;
   pointer-events: none;
